apresentacao/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apresentacao
  labels:
    name: apresentacao
    environment: production
    app: saude-publica
