apresentacao/sidekiq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidekiq
  namespace: apresentacao
  labels:
    app: sidekiq
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidekiq
  template:
    metadata:
      labels:
        app: sidekiq
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-11-21T12:10:00Z"
    spec:
      containers:
        - name: sidekiq
          image: 961341521437.dkr.ecr.sa-east-1.amazonaws.com/saude-publica-web:apresentacao-3
          imagePullPolicy: Always
          command: ["/bin/bash", "-c"]
          args:
            - |
              echo "Aguardando banco de dados..."
              sleep 15

              # Configurar PATH para rbenv
              export PATH="/usr/local/rbenv/shims:/usr/local/rbenv/bin:$PATH"

              echo "Iniciando Sidekiq..."
              bundle exec sidekiq -C config/sidekiq.yml
          resources:
            requests:
              cpu: "100m"
              memory: "1Gi"
            limits:
              cpu: "800m"
              memory: "2Gi"

      restartPolicy: Always
